<resources>
    <string name="app_name">MADAssignment!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">Logo</string>
    <string name="username">Username</string>
    <string name="board_size_option_String">Select Board Size</string>
    <string name="select_match_condition">Select Match Condition</string>
    <string name="select_player_1_marker">Player 1 Marker</string>
    <string name="select_player_2_marker">Player 2 Marker</string>
    <string name="marker_image_description">Marker</string>
    <string name="undo">Undo</string>
    <string name="reset">Reset</string>
    <string name="start">Start!</string>
    <string name="playerTurn">PlayerTurn:</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="arrow_symbol">➜</string>
    <string name="image_description">User Avatar</string>
    <string name="game_over">Game Over!</string>
    <string name="winner">Winner:</string>
    <string name="return_home">Return Home</string>
    <string name="human_vs_human">Human vs Human 👤👤</string>
    <string name="human_vs_ai">Human vs AI 👤🤖</string>
    <string name="tic_tac_toe">TIC TAC TOE</string>
    <string name="new_game">New Game</string>
    <string name="your_statistics">Your Statistics</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="_1">1.</string>
    <string name="person_1">Person 1</string>
    <string name="_2">2.</string>
    <string name="person_2">Person 2</string>
    <string name="_3">3.</string>
    <string name="person_3">Person 3</string>
    <string name="_4">4.</string>
    <string name="person_4">Person 4</string>
    <string name="_5">5.</string>
    <string name="person_5">Person 5</string>
    <string name="return_to_game">Return to Game</string>
    <string name="settings">Settings</string>
    <string name="exit_game">Exit Game</string>
    <string name="games_won_0">Games Won: 0</string>
    <string name="games_lost_0">Games Lost: 0</string>
    <string name="games_drawn_0">Games Drawn: 0</string>
    <string name="games_played_0">Games Played: 0</string>
    <string name="win_percentage_0">Win Percentage: 0%</string>
    <string name="current_player_s_marker">Current player\'s marker</string>
    <string name="users_avatar">Users Avatar</string>
    <string name="pause_button_image">Pause button image</string>
    <string name="application_logo">Application Logo</string>
    <string name="golden_star">golden star</string>
    <string name="games_tied">Games Tied: %1$s</string>
    <string name="games_lost">Games Lost: %1$s</string>
    <string name="games_won">Games Won: %1$s</string>
    <string name="games_played">Games Played: %1$s</string>
    <string name="win_percentage">Win Percentage: %1$s%%</string>
</resources>