<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="40dp"
        >
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/star"
            android:contentDescription="@string/golden_star"
            android:layout_gravity="center"

            />
        <TextView
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:text="@string/leaderboard"
            android:textSize="25sp"
            android:textAlignment="center"
            android:layout_weight="5"
            android:textStyle="bold"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/_1"
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:layout_weight="5"
                />
            <TextView
                android:id="@+id/firstName"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="25sp"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:layout_weight="1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/_2"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textSize="25sp"
                android:textAlignment="center"
                android:layout_weight="5"
                />
            <TextView
                android:id="@+id/secondName"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="25dp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:layout_weight="1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/_3"
                android:layout_marginTop="10dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_weight="5"
                />
            <TextView
                android:id="@+id/thirdName"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:layout_weight="1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/_4"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textSize="25sp"
                android:textAlignment="center"
                android:layout_weight="5"
                />
            <TextView
                android:id="@+id/fourthName"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="25sp"
                android:gravity="start"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/_5"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textAlignment="center"
                android:layout_weight="5"
                />
            <TextView
                android:id="@+id/fifthName"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="25sp"
                android:gravity="start"
                android:textStyle="bold"
                android:layout_weight="1"
                />
        </LinearLayout>
        </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintHeight_percent= "0.1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/back"
            android:layout_gravity="start"
            android:scaleType="fitXY"
            android:contentDescription="@string/pause_button_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1">

        </ImageButton>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>