<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomepageFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:text="@string/username"
            android:textSize="51sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="247dp"
            android:layout_height="222dp"
            android:src="@drawable/avatar_default"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView"
            app:layout_constraintVertical_bias="0.106" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/Button_ConstraintLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/rounded_rectangle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintHeight_percent="0.22">

            <TextView
                android:id="@+id/winText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/games_won_0"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/lossText"
                app:layout_constraintWidth_percent="0.8"/>

            <TextView
                android:id="@+id/lossText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/games_lost_0"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/winText"
                app:layout_constraintBottom_toTopOf="@id/drawText"
                app:layout_constraintWidth_percent="0.8"/>

            <TextView
                android:id="@+id/drawText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/games_drawn_0"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lossText"
                app:layout_constraintBottom_toTopOf="@id/gamesPlayedText"
                app:layout_constraintWidth_percent="0.8"/>

            <TextView
                android:id="@+id/gamesPlayedText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/games_played_0"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/drawText"
                app:layout_constraintBottom_toTopOf="@id/winPercentText"
                app:layout_constraintWidth_percent="0.8"/>
            <TextView
                android:id="@+id/winPercentText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/win_percentage_0"
                app:layout_constraintEnd_toEndOf="parent"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gamesPlayedText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintWidth_percent="0.8"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"

            app:layout_constraintHeight_percent= "0.1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/back"
                android:layout_gravity="start"
                android:scaleType="fitXY"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1">

            </ImageButton>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
