<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/LoginFragmentFrameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameSettingsFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/LoginFragmentConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp" >
                <AutoCompleteTextView
                    android:id="@+id/BoardSizeOptionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/board_size_option_String"
                    android:inputType="none" >
                </AutoCompleteTextView>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp" >
                <AutoCompleteTextView
                    android:id="@+id/MatchConditionDropDownTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/select_match_condition"
                    android:inputType="none" >
                </AutoCompleteTextView>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp" >
                <AutoCompleteTextView
                    android:id="@+id/Player1MarkerSelectorDropDownTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/select_player_1_marker"
                    android:inputType="none" >
                </AutoCompleteTextView>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp" >
                <AutoCompleteTextView
                    android:id="@+id/Player2MarkerSelectorDropDownTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/select_player_2_marker"
                    android:inputType="none" >
                </AutoCompleteTextView>
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/player1markerImage"
                    android:layout_width="0dp"
                    android:layout_height="130dp"
                    android:layout_weight="1"
                    android:src="@drawable/x"
                    android:scaleType="centerInside"
                    android:contentDescription="@string/marker_image_description"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp" />
                <ImageView
                    android:id="@+id/player2markerImage"
                    android:layout_width="0dp"
                    android:layout_height="130dp"
                    android:layout_weight="1"
                    android:src="@drawable/x"
                    android:scaleType="centerInside"
                    android:contentDescription="@string/marker_image_description"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp" />
            </LinearLayout>
            <Button
                android:id="@+id/startButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:layout_gravity="center_horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:padding="15dp" />
        </LinearLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"

            app:layout_constraintHeight_percent= "0.1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/back"
                android:layout_gravity="start"
                android:scaleType="fitXY"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1">

            </ImageButton>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>